[package]
name = "gbemu"
version = "0.1.0"
authors = ["haroldm <harold@mrtz.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
luminance = "0.42"
luminance-glfw = "0.14"
luminance-windowing = "0.9"
luminance-gl = "0.15"
luminance-derive = "0.6"
glfw = "0.40"